log
Fri Apr  8 15:02:55 UTC 2022: 
 tests:  0|6
total_score: 0/70
50a4e76
Fri Apr  8 15:14:46 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: incompatible types when assigning to type ‘HashMap {aka struct HashMap}’ from type ‘void *’
     map[capacity] = NULL;
                   ^
Compilation failed
9c1de1a
Fri Apr  8 15:15:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: incompatible types when assigning to type ‘HashMap {aka struct HashMap}’ from type ‘void *’
     map[capacity] = NULL;
                   ^
Compilation failed
5d5d5d0
Fri Apr  8 15:24:11 UTC 2022: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
3133c3d
Fri Apr  8 15:25:07 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a1403d4
Fri Apr  8 15:32:53 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
5528128
vi.,  8 de abr. de 2022 16:49:54: 
 tests:  1|5
total_score: 10/70
0e7e464
vi.,  8 de abr. de 2022 16:56:10: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
932918f
vi.,  8 de abr. de 2022 17:06:59: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6e77b86
vi.,  8 de abr. de 2022 17:07:49: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
283735b
vi.,  8 de abr. de 2022 17:11:25: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
6767f0d
vi.,  8 de abr. de 2022 17:14:14: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1ba2564
vi.,  8 de abr. de 2022 17:15:57: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
40a8c5e
